# dummymate

./: .coveragerc  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: build.yaml
dummymate/: cli.py  cowsay.py  martinsay.py  something_important.py
tests/: test_cowsay.py  test_martinsay.py
