
[project]
name = "dummymate"
version = "0.1.0"
description = "dumb ass"
authors = [
  {name = "Mihhail Samusev", email = "mhs@bluepp.dk" }
]
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "mypy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests"]
